# dataglass

./: .gitignore  .~lock.cleaned_test.csv#  LICENSE  README.md  __init__.py  pyproject.toml  readme.md  requirements.txt  setup.py
pipeline/: __init__.py  pipeline.py
preprocessing/: __init__.py  duplicate_handling.py  feature_encoding.py  feature_scaling.py  missing_handling.py  outlier_handling.py  type_conversion.py
src/: __init__.py
src/dataglass/: __init__.py
src/dataglass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dataglass/automation/: __init__.py  auto_preprocessing.py
src/dataglass/preprocessing/: __init__.py  feature_encoding.py  feature_scaling.py  outlier_handling.py  type_conversion.py
tests/: test_auto_preprocessing.py  test_preprocessing.py
