[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataglass"
version = "0.1.0"
description = "A Python library for data preprocessing, exploratory data analysis (EDA), and machine learning. This version implements the preprocessing module, including missing value handling, duplicate detection and handling, outlier handling, feature encoding, type conversion, and feature scaling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/samantim/dataglass"
Documentation = "https://github.com/samantim/dataglass/wiki"
Source = "https://github.com/samantim/dataglass"
Issues = "https://github.com/samantim/dataglass/issues"

authors = [
  { name = "Saman Teymouri", email = "saman.teymouri@gmail.com" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

keywords = ["data preprocessing", "EDA", "machine learning", "data cleaning", "feature engineering", "pandas", "scikit-learn"]

dependencies = [
  "pandas>=1.5",
  "numpy>=1.21",
  "scikit-learn>=1.1",
  "matplotlib>=3.5",
  "rapidfuzz>=3.0",
  "seaborn>=0.11",
  "category_encoders>=2.5"
]
